k8s/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-delivery-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: food-delivery
  template:
    metadata:
      labels:
        app: food-delivery
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: food-delivery
          image: ghcr.io/petr7555/pv179-food-delivery:main
          ports:
            - containerPort: 8000
