k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-delivery-svc
spec:
  type: ClusterIP
  ports:
    - name: food-delivery-port
      port: 80
      targetPort: 8000
  selector:
    app: food-delivery
